syntax = "proto3";

package account;

service AccountService {
  rpc CreateAccount (CreateAccountRequest) returns (AccountResponse);
  rpc GetAccount (GetAccountRequest) returns (AccountResponse);
  rpc UpdateAccount (UpdateAccountRequest) returns (AccountResponse);
  rpc DeleteAccount (DeleteAccountRequest) returns (DeleteAccountResponse);
  rpc ListAccounts (ListAccountsRequest) returns (ListAccountsResponse);
}

message CreateAccountRequest {
  int64 userId = 1;
  int32 accountType = 2;
  int32 status = 3;
}

message GetAccountRequest {
  string id = 1;
}

message UpdateAccountRequest {
  string id = 1;
  int32 accountType = 2;
  int32 status = 3;
}

message DeleteAccountRequest {
  string id = 1;
}

message DeleteAccountResponse {
  bool success = 1;
  string message = 2;
}

message ListAccountsRequest {
  int64 userId = 1;
  int32 page = 2;
  int32 limit = 3;
}

message ListAccountsResponse {
  repeated AccountResponse accounts = 1;
  int32 total = 2;
  int32 page = 3;
  int32 limit = 4;
}

message AccountResponse {
  string id = 1;
  int64 userId = 2;
  int32 accountType = 3;
  int32 status = 4;
  string createdAt = 5;
  string updatedAt = 6;
}

